Lander - Fix serverless stack screenshot on mobile - Tweak footer styles on mobile - Tweak about page 2017 bolding - Check why resource styles are different on the iphone

--- a/_sass/about.scss
+++ b/_sass/about.scss
@@ -15,6 +15,9 @@ main > .wrapper > .about {
     p {
       font-size: 20px;
       color: $secondary-text-color;
+      b {
+        font-weight: 500;
+      }
     }
 
     @include media-query($on-palm) {
